# FloppyJam

./: CMakeLists.txt  E2E_TEST.md  README.md  REQUIREMENTS_CHECKLIST.md  REQ_DESIGN.md
scripts/: package.cmake
src/: audio.c  audio.h  control.h  core.c  headless.c  headless.h  i18n.c  i18n.h  main.c  music.h  render.c  render.h  save.c  save.h  sim.c  sim.h
tests/: audio_integration.c  integration.c  raylib.h  test.c
tools/: validate.c
v1/: .gitignore  README.md
v1/scripts/: check_size.cmake
v1/src/: control.c  core.c  core.h  headless.h  music.c
v1/tests/: audio_integration.c  integration.c  test.c
v1/tools/: control_harness.c  status.c
v2/: .gitignore  Makefile  README.md  THE_GAUNTLET_spec.md
v2/src/: audio.c  audio.h  cards.c  cards.h  chart.c  chart.h  clock.c  clock.h  common.h  draw.c  draw.h  game.c  game.h  heat.c  heat.h  main.c  persist.c  rng.c  rng.h  screens.c  sequencer.c  sequencer.h  voices.c  voices.h
v2/src/micro/: micro_a.c  micro_b.c  micro_c.c  micro_common.c  micro_common.h  roster.c
v3/: .gitignore  CMakeLists.txt  POLYBLOOM_Complete_Game_Requirements_and_Design_Spec.md  README.md
v3/cmake/: SizeReport.cmake
v3/src/: audio.c  audio.h  camera.c  camera.h  collision.c  collision.h  gameplay.c  gameplay.h  levels.c  levels.h  main.c  meshgen.c  meshgen.h  particles.c  particles.h  platform.h  platform_raylib.c  player.c  player.h  render.c  render.h  save.c  save.h  ui.c  ui.h
v3/tests/: controller_test.c
v4/: .gitignore  CMakeLists.txt  README.md  readme.maglava.md
v4/cmake/: SizeReport.cmake
v4/levels/: level-10.json  level-11.json  level-12.json  level-13.json  level-14a.json  level-14b.json  level-14c.json  level-15.json  level-1a.json  level-1b.json  level-1c.json  level-2a.json  level-2b.json  level-2c.json  level-3a.json  level-3b.json  level-4a.json  level-4b.json  level-4c.json  level-5.json  level-6a.json  level-6b.json  level-7.json  level-8.json  level-9.json
v4/src/: app.h  audio.c  levels.c  levels_gen.h  maglava.h  main.c  music.c  music.h  render.c  save.c  sim.c  ui.c
v4/tests/: test_sim.c
v4/tools/: gen_levels.py  music_preview.c  playthrough_screenshots.sh
v5/: .gitignore  BREAK_PAR_spec.md  Makefile  README.md
v5/data/: holes.h
v5/src/: camera.c  camera.h  core.h  course.c  course.h  juice.c  juice.h  main.c  physics.c  physics.h  render.c  render.h  replay.c  replay.h  save.c  save.h  shot.c  shot.h  synth.c  synth.h
v5/tests/: test_course.c  test_physics.c
v6/: HUEDUNIT_req_design_gameplan.md
