cmake_minimum_required(VERSION 3.16)
project(SongsFromBadSectors C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
option(SFBS_DEBUG_TOOLS "Enable developer controls" ON)
option(SFBS_BUILD_GAME "Build raylib game" ON)
add_library(sfbs_core src/core.c src/music.c src/sim.c src/save.c src/i18n.c src/headless.c src/control.c)
target_include_directories(sfbs_core PUBLIC src)
if(NOT MSVC)
  target_link_libraries(sfbs_core PUBLIC m)
  target_compile_options(sfbs_core PRIVATE -Wall -Wextra -Wpedantic)
endif()
add_executable(sfbs_tests tests/test.c)
target_link_libraries(sfbs_tests PRIVATE sfbs_core)
add_executable(sfbs_integration tests/integration.c)
target_link_libraries(sfbs_integration PRIVATE sfbs_core)
enable_testing()
add_test(NAME core COMMAND sfbs_tests)
add_test(NAME integration COMMAND sfbs_integration)
add_executable(sfbs_validate tools/validate.c)
target_link_libraries(sfbs_validate PRIVATE sfbs_core)
add_executable(sfbs_status tools/status.c)
target_link_libraries(sfbs_status PRIVATE sfbs_core)
add_test(NAME headless_56_bar COMMAND sfbs_status)
add_executable(sfbs_control_harness tools/control_harness.c)
target_link_libraries(sfbs_control_harness PRIVATE sfbs_core)
add_test(NAME control_harness COMMAND sfbs_control_harness)
if(SFBS_BUILD_GAME)
  find_package(raylib 6.0 QUIET)
  if(raylib_FOUND)
    add_executable(SongsFromBadSectors src/main.c src/audio.c src/render.c)
    target_link_libraries(SongsFromBadSectors PRIVATE sfbs_core raylib)
    add_executable(sfbs_audio_integration tests/audio_integration.c src/audio.c)
    target_link_libraries(sfbs_audio_integration PRIVATE sfbs_core raylib)
    add_test(NAME audio_integration COMMAND sfbs_audio_integration)
    if(SFBS_DEBUG_TOOLS)
      target_compile_definitions(SongsFromBadSectors PRIVATE SFBS_DEBUG=1)
    endif()
    if(WIN32)
      target_link_libraries(SongsFromBadSectors PRIVATE winmm gdi32 opengl32)
      set_target_properties(SongsFromBadSectors PROPERTIES WIN32_EXECUTABLE TRUE)
    endif()
  else()
    message(STATUS "raylib 6.0 not found: core tests/validator will still build")
  endif()
endif()
